--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "body-parser": "^1.19.2"
+    "body-parser": "^1.19.2",
+    "mongoose": "^6.8.0"
   },
   "engines": {
     "node": "16.x"
