--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "body-parser": "^1.19.2",
-    "mongoose": "^6.8.0"
+    "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1"
   },
   "engines": {
     "node": "16.x"
