--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "body-parser": "^1.19.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "mongoose": "^6.8.0"
   },
   "engines": {
