--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "body-parser": "^1.19.2",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16.x"
   },
   "license": "MIT"
 }
